# AcademyFinalProject

ros2_academy_ws/: .gitignore  README.md
ros2_academy_ws/docker/: README.md  build_image.sh  dockerfile  install_rosdeps.sh  start_container.sh
ros2_academy_ws/src/Universal_Robots_ROS2_Description/: README.md
ros2_academy_ws/src/Universal_Robots_ROS2_Description/config/ur5e/: joint_limits.yaml
ros2_academy_ws/src/academy_latest_pointcloud/: Dockerfile  package.xml  setup.cfg  setup.py
ros2_academy_ws/src/academy_latest_pointcloud/academy_latest_pointcloud/: depth_to_pointcloud_service.py
ros2_academy_ws/src/academy_robot_approach_screw/: AMR_SCREW_PATCH_README.md  CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_approach_screw/action/: ApproachScrew.action
ros2_academy_ws/src/academy_robot_approach_screw/launch/: approach_screw.launch.py
ros2_academy_ws/src/academy_robot_approach_screw/src/: approach_screw_server.cpp
ros2_academy_ws/src/academy_robot_common/academy_robot_common/: package.xml
ros2_academy_ws/src/academy_robot_description/: package.xml  robot_description.repo.yaml
ros2_academy_ws/src/academy_robot_description/launch/: academy_robot_description.launch.py
ros2_academy_ws/src/academy_robot_description/robots/academy_robot/: academy_robot.urdf.xacro  academy_robot_plus.urdf.xacro
ros2_academy_ws/src/academy_robot_description/simulators/gazebo_classic/academy_robot/: academy_robot_control.urdf.xacro  academy_robot_controller_params.yaml
ros2_academy_ws/src/academy_robot_description/simulators/gazebo_ignition/academy_robot/: academy_robot_controller_params.yaml
ros2_academy_ws/src/academy_robot_description/urdf/: academy_robot_base.urdf.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur_gripper.urdf.xacro
ros2_academy_ws/src/academy_robot_description/urdf/bodies/academy_robot/: academy_robot_plus_body.urdf.xacro
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_battery_msgs/: CHANGELOG.rst  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_common_msgs/: CHANGELOG.rst  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_controllers_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_interfaces/: CHANGELOG.rst  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_io_msgs/: CHANGELOG.rst  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_navigation_msgs/: CHANGELOG.rst  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_perception_msgs/: CHANGELOG.rst  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_pointcloud_interfaces/: CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_pointcloud_interfaces/srv/: GetPointCloud.srv
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_safety_msgs/: CHANGELOG.rst  package.xml
ros2_academy_ws/src/academy_robot_interfaces/academy_robot_supervisor_msgs/: CHANGELOG.rst  package.xml
ros2_academy_ws/src/academy_robot_moveit_config/config/: academy_robot_arm.srdf  academy_robot_arm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
ros2_academy_ws/src/academy_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_academy_ws/src/academy_robot_pick_place/: CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_pick_place/launch/: pick_place.launch.py
ros2_academy_ws/src/academy_robot_pick_place/src/: pick_place_orchestrator.cpp
ros2_academy_ws/src/academy_robot_pointcloud_server/: CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_pointcloud_server/src/: depth_to_pointcloud_server.cpp
ros2_academy_ws/src/academy_robot_pose_estimator/: CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_pose_estimator/include/academy_robot_pose_estimator/: registration.hpp
ros2_academy_ws/src/academy_robot_pose_estimator/launch/: run_pose.launch.py
ros2_academy_ws/src/academy_robot_pose_estimator/src/: pose_estimator_node.cpp  registration.cpp  screw_pose_service.cpp
ros2_academy_ws/src/academy_robot_pose_interfaces/: CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_pose_interfaces/srv/: GetScrewPose.srv
ros2_academy_ws/src/academy_robot_sensors/academy_robot_sensors/: CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_sensors/academy_robot_sensors/test/: test.xacro  xacro_test.py
ros2_academy_ws/src/academy_robot_sensors/academy_robot_sensors/urdf/deprecated/: intel_d435.urdf.xacro  rslidar_mems.urdf.xacro
ros2_academy_ws/src/academy_robot_simulation/academy_robot_gazebo_classic/: package.xml
ros2_academy_ws/src/academy_robot_simulation/academy_robot_gazebo_classic/launch/: spawn_robot.launch.py
ros2_academy_ws/src/academy_robot_simulation/academy_robot_gazebo_ignition/: CMakeLists.txt  package.xml
ros2_academy_ws/src/academy_robot_simulation/academy_robot_gazebo_ignition/launch/: spawn_robot.launch.py  spawn_world.launch.py
ros2_academy_ws/src/academy_robot_simulation/academy_robot_gazebo_ignition/worlds/: demo.sdf.world
ros2_academy_ws/src/depth_pcd_processor/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ros2_academy_ws/src/depth_pcd_processor/depth_pcd_processor/: pcd_processor_node.py
ros2_academy_ws/src/depth_pcd_processor/depth_pcd_processor/launch/: complete_simulation.launch.py  pcd_processor.launch.py
ros2_academy_ws/src/depth_to_pointcloud/: README.md  package.xml  setup.py
ros2_academy_ws/src/depth_to_pointcloud/depth_to_pointcloud/: depth_to_pointcloud_node.py
ros2_academy_ws/src/depth_to_pointcloud/launch/: complete_simulation.launch.py  depth_to_pointcloud.launch.py
ros2_academy_ws/src/gripper_command/: CMakeLists.txt  package.xml
ros2_academy_ws/src/gripper_command/src/: gripper_commander.cpp
(+4 files in other folders)
