<?xml version="1.0"?>
<package format="3">
  <name>academy_latest_pointcloud</name>
  <version>0.0.1</version>
  <description>Service that returns the latest PointCloud2 built from depth + camera info.</description>

  <maintainer email="cheaytox27@gmail.com">You</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>academy_robot_interfaces</depend>
  <depend>python3-numpy</depend>

  <exec_depend>academy_robot_pointcloud_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>