<?xml version="1.0"?>
<package format="3">
  <name>academy_robot_pick_place</name>
  <version>0.1.0</version>
  <description>Orchestrates approach action + screw pose service + MoveIt2 pick and place.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>academy_robot_approach_screw</depend>
  <depend>academy_robot_pose_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- MoveIt2 deps (adjust to your setup) -->
  <depend>moveit_ros_planning_interface</depend>
</package>
