<?xml version="1.0"?>
<package format="3">
  <name>academy_robot_pointcloud_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for pointcloud extractor (msgs/srvs).</description>

  <maintainer email="cheaytox27@gmail.com">You</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
